# umn-ta2-database-processing

./: .gitignore  Dockerfile  README.md  checking.pkl  db_processing.py  git_push.sh  process_data_to_schema.py  pyproject.toml  run_processing.sh  sample_mapfile.csv  single_file.py  tester.py
procmine/: __init__.py  _procmine.py  _save_utils.py  _utils.py
procmine/_entities/: _commod_groups.pkl
procmine/converting/: __init__.py  _attribute.py  _crs.py  _datatype.py  _entity.py
procmine/converting/_schema/: __init__.py  _entity.py  deposit_type_candidate.py  geology_info.py  location_info.py  mineral_inventory.py  mineral_site.py
procmine/data/: __init__.py  _convert.py  _load.py  _load_utils.py  _save.py  _save_utils.py
procmine/processing/: __init__.py  _value.py
tests/: tester.py
utils/data/: __init__.py  _load.py
utils/processing/: __init__.py  _label.py
