[tool.poetry]
name = "umn-ta2-database-processing"
version = "0.2.0"
description = ""
authors = ["Jiyoon Pyo <jiyoonp0228@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
